<resources>
    <string name="app_name">Daitech Agent - Workforce</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_main">Map</string>
    <string name="google_direction_api">AIzaSyDcUwk5nBq2FTZsbWDVt1gQKW1MZYw5Ioo</string>
    <string name="tv_login_title">Daitech</string>
    <string name="tv_login_subtitle">Workforce - Sales Rep</string>
    <string name="tv_login_subtitle_about">Workforce - About</string>
    <string name="login">LOG IN</string>
    <string name="signin">SIGN IN</string>
    <string name="register_account">REGISTER</string>
    <string name="btn_accept">ACCEPT</string>
    <string name="btn_decline">DECLINE</string>
    <string name="tv_find_users">Find users</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_denied_location">Permission is required to obtain location</string>
    <string name="cancelled">Cancelled</string>
    <string name="could_not_login">Could not login</string>
    <string name="device_not_supported">This device is not supported</string>c
    <string name="cannot_get_location">Cannot get your location</string>
    <string name="fill_fields">Please fill all fields</string>
    <string name="enter_email">Please enter email address</string>
    <string name="enter_customername">Please select customer name</string>
    <string name="enter_customerreport">Please enter customer report</string>
    <string name="enter_daily_schedule_description">Please a brief description of visit</string>
    <string name="enter_daily_schedule_date">Please select the date of visit</string>
    <string name="enter_daily_schedule_period">Please select the period of visit</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_name">Please enter name</string>
    <string name="enter_address">Please enter address</string>
    <string name="enter_contact_person">Please enter name of contact person</string>
    <string name="enter_phone">Please enter phone number</string>
    <string name="password_short">Password too short</string>
    <string name="failed">Failed </string>
    <string name="registration_failed">Registration Failed </string>
    <string name="failed_existence">Failed! User username is invalid. Check system administrator.</string>
    <string name="cancel">Cancel</string>
    <string name="register">REGISTER</string>
    <string name="registered">Registered</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="title_activity_driver_tracking">Map</string>
    <string name="title_activity_trip_detail">Map</string>
    <string name="title_activity_drawer_home">DrawerHome</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="facebook_app_id">2210819865853004</string>
    <string name="fb_login_protocol_scheme">fb2210819865853004</string>
    <string name="reports">Reports</string>
    <string name="performance_graphs">Analytics</string>
    <string name="password_reset">Forgot your password?</string>

    <string name="action_comment">Comments</string>

    <string name="title_activity_report_map_location">Reporting Location</string>
    <string name="hint_location">Indicate Customer of Visit</string>
    <string name="btn_add_new_journey_plan">Add Journey Schedule</string>
    <string name="hint_visitdate">Date of Visit (DD-MM-YYYY)</string>
    <string name="select_visit_date">Select Date</string>
    <string name="gps_network_not_enabled">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="open_location_settings">Open Location Settings</string>
    <string name="Cancel">Cancel</string>
    <string name="permission_location_rationale">Location permission is needed to use the location service required.</string>
    <string name="OK">OK</string>
    <string name="permision_available_location">Location Permission has been granted.</string>
    <string name="background_permision_available_location">Background location Permission has been granted.</string>
    <string name="permissions_not_granted">Permissions were not granted.</string>
    <string name="location_return_not_null">Location object NOT NULL</string>
    <string name="report_picture">Report image</string>
    <string name="title_activity_reports_map_location">Map</string>

    <string name="dialog_permission_title">The app requires the permissions to run. Please grant the requested permissions.</string>
    <string name="main_activity_repeat">Retry</string>
    <string name="main_activity_exit">Exit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_customer_spinner_prompt">Please Select Customer</string>
    <string name="select_schedule_period_spinner_prompt">Please Select Customer</string>

    <string name="check_internet_connection">Please check your internet connection.</string>


    <string name="title_activity_scan_history">Scan History</string>
    <string name="title_activity_maps_customer_location">Customer Location</string>
    <string name="about_text">Daitech Workforce for agents is tool to monitor sales representative in the field.</string>
    <string-array name="period_array">
        <item>Morning Schedule</item>
        <item>Afternoon Schedule</item>
        <item>Evening Schedule</item>
        <item>Night Schedule</item>
    </string-array>
</resources>
